Finally got the NautilusIconizer to work.